:bug: fix : z-index sidebar

--- a/src/components/SideBar/sidebar.scss
+++ b/src/components/SideBar/sidebar.scss
@@ -3,7 +3,7 @@
 .sidebar_container {
   display: flex;
   height: 100%;
-  z-index: 10000;
+  // z-index: 999;
   position: fixed;
 }
 
