--- a/src/pages/Project/project.scss
+++ b/src/pages/Project/project.scss
@@ -9,6 +9,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index:0;
+
+  & a {
+    color: rgb(73, 73, 73);
+  }
 
   &-container {
     display: flex;
@@ -367,6 +372,7 @@
   padding-right: 0.2rem;
     padding-left: 0.2rem;
     z-index: 1;
+}
 
 .searchbar-project-page {
   margin-top: -1rem;
@@ -384,8 +390,6 @@
     width:93vw;
   }
 
-
-
 }
 
 
@@ -395,6 +399,7 @@
     margin: 0;
     width:90vw;
   }
+
   .project-container {
     flex-wrap: wrap;
 
@@ -433,11 +438,9 @@
 
   .project-dates {
     width:85%;
-
   }
 
   .project-description {
-    // min-height: 50%;
     margin-top: 2rem;
 
     &-technologies {
@@ -537,9 +540,9 @@
   color:rgba(255, 255, 255, 0.852);
 }
 
-#dark .technologies-icon-container2 {
-  // width:100%;
-}
+// #dark .technologies-icon-container2 {
+//   // width:100%;
+// }
 
 #dark .project {
 
@@ -561,3 +564,5 @@
   top: 3.9rem;
   background-color: rgba(255, 255, 255, 0);
 }
+
+
