--- a/src/pages/TeamCreation/teamCreation.scss
+++ b/src/pages/TeamCreation/teamCreation.scss
@@ -9,7 +9,7 @@
     justify-content: center;
     position:absolute;
     top:0;
-    z-index:1000;
+    z-index:1000 !important;
 
     &-container {
         background-color: #fff;
